[tool.poetry]
name = "trivial"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
awsebcli = { git = "git@github.com:justinwoo/aws-elastic-beanstalk-cli.git", branch = "fix-versions" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
